<resources>
    <string name="app_name">ABCPlay</string>

    <string name="s_user">User</string>
    <string name="s_password">Password</string>
    <string name="s_no_results">No media found</string>
    <string name="s_search">Search</string>

    <string name="s_tmp_video">Show video</string>
    <string name="s_tmp_audio">Listening to audio</string>
    <string name="s_coming_soon">Coming soon</string>

    <string name="s_no_user">Ingrese un usuario</string>
    <string name="s_no_password">Ingrese un password</string>
    <string name="s_no_user_found">"No se encontraron usuarios"</string>
    <string name="s_no_media_found">"No se encontraron coincidencias"</string>
    <string name="s_no_students_found">"No se encontraron alumnos"</string>
    <string name="s_out_of_range">Fuera de rango</string>
    <string name="s_name">Nombre alumno</string>

    <string name="s_colors">Colors</string>
    <string name="s_shapes">Shapes</string>
    <string name="s_vowels">Vowels</string>
    <string name="s_gender">Genero</string>

    <string name="s_male">Masculino</string>
    <string name="s_female">Femenino</string>

    <string name="s_save">Guardar</string>
    <string name="s_group">Grupal</string>
    <string name="s_single">Individual</string>
</resources>
