<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/img_logo_main" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_name_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/s_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <!-- Colors -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/s_colors"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_color_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/s_group"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_color_single"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/s_single"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <!-- Shapes -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/s_shapes"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_shape_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/s_group"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_shape_single"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/s_single"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <!-- Vowels -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/s_vowels"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_vowel_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/s_group"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_vowel_single"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/s_single"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/bt_save_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s_save"
            android:background="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:layout_margin="16dp"/>

    </LinearLayout>
</ScrollView>