<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.alvardev.android.abcplay.MonitoringActivity">

    <LinearLayout
        android:id="@+id/lla_tmp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/img_mod_monitoring" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/s_search"
                android:inputType="text" />

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@color/colorGreen"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_search_white_24dp" />

        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/iv_exit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/app_name"
        android:padding="8dp"
        android:src="@drawable/img_exit" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lla_tmp">

        <TextView
            android:id="@+id/tv_no_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/s_no_students_found"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_students"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <include
            android:id="@+id/progress_bar"
            layout="@layout/layout_loading"
            android:visibility="gone" />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fa_add_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_add_white_24dp"
        app:layout_anchor="@+id/appbar" />


</RelativeLayout>
